--- a/wwwroot/css/booking.css
+++ b/wwwroot/css/booking.css
@@ -142,6 +142,7 @@ select:focus {
   display: flex;
   flex-direction: column;
   row-gap: 50px;
+  position: relative;
 }
 
 #book-list-range > h2 {
@@ -188,4 +189,14 @@ select:focus {
   border: none;
   padding: 20px;
   border-bottom: 1px solid var(--blackgray);
+}
+
+.message_error {
+  color: var(--red);
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
 }
