--- a/Views/Search/UserProfile.cshtml
+++ b/Views/Search/UserProfile.cshtml
@@ -31,7 +31,7 @@
     @if (Model.BlackList)
     {
         <button type="button" id="unblacklist"
-        onclick="confirmPopUpOnForm({id : '@Model.Id', blacklist : 'false'});">UnBlacklist</button>
+        onclick="confirmPopUpOnForm({id : '@Model.Id', blacklist : 'false'});">Unblacklist</button>
     }
     else
     {
