--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
         case "Search/UserBooklist":
         case "Search/UserProfile":
         case "Admin/Blacklist":
+        case "LabAdmin/ViewItem":
             <div class="modal-off" id="modal">
                 <form method="POST" class="card">
                     @RenderSection("Modals", required : false)
