--- a/wwwroot/css/view_item.css
+++ b/wwwroot/css/view_item.css
@@ -101,6 +101,7 @@
 .book-list-range table {
     display: grid;
     grid-template-columns: 0.5fr 0.75fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
+    min-width: 80%; 
 }
 
 .book-list-range thead,
@@ -153,14 +154,9 @@
     border-radius: 10px;
     border: 1px solid var(--red);
 }
-
-.status {
-    padding: 0 20px;
-    display: flex;
-}
   
 .status > span {
-    padding: 5px;
+    padding: 10px;
     width: 120px;
     color: #ffffff;
     border-radius: 15px;
