--- a/wwwroot/css/user_booklist.css
+++ b/wwwroot/css/user_booklist.css
@@ -63,7 +63,7 @@ table {
     display: grid;
     margin: 50px 7.5%;
     border-collapse: collapse;
-    grid-template-columns: 1.25fr 1.25fr 0.5fr 0.5fr 1fr 0.5fr;
+    grid-template-columns: 0.5fr 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
     background-color: #ffffff;
     width: 100%;
 }
@@ -76,7 +76,8 @@ tr {
   
 th,
 td {
-    text-align: center;
+    display: inline-flex;
+    align-items: center;
 }
   
 th {
@@ -91,26 +92,32 @@ th {
   
 td {
     border-bottom: 1px solid var(--blackgray);
-    padding: 20px 20px;
+    padding: 15px 20px;
 }
   
-td:not(:nth-child(6n+6)){
+/*td:not(:nth-child(6n+6)){
     line-height: 28px;
+}*/
+
+th:first-child, th:last-child,
+td:first-child, td:last-child {
+  justify-content: center;
 }
   
-.status {
+/*.status {
     padding: 0 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+}*/
   
 .status > span {
-    padding: 5px;
+    padding: 8px;
     width: 120px;
     color: #ffffff;
     border-radius: 15px;
     background-color: var(--gray);
+    text-align: center;
 }
   
 .status > .using {
@@ -122,7 +129,7 @@ td:not(:nth-child(6n+6)){
 }
   
 .icon i {
-    font-size: 28px;
+    font-size: 32px;
     color: var(--red);
     cursor: pointer;
 }
