--- a/wwwroot/css/view_item.css
+++ b/wwwroot/css/view_item.css
@@ -125,7 +125,7 @@
   
 .book-list-range td {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 15px 20px;
     border-bottom: 1px solid var(--blackgray);
 }
 
@@ -137,7 +137,7 @@
 } 
 
 .book-list-range i {
-    font-size: 36px;
+    font-size: 32px;
     color: var(--red);
     cursor: pointer;
 }
@@ -156,7 +156,7 @@
 }
   
 .status > span {
-    padding: 10px;
+    padding: 8px;
     width: 120px;
     color: #ffffff;
     border-radius: 15px;
