--- a/Views/LabAdmin/ViewItem.cshtml
+++ b/Views/LabAdmin/ViewItem.cshtml
@@ -6,12 +6,17 @@
 
 @section Styles{
 <link rel="stylesheet" href="~/css/view_item.css">
+<link rel="stylesheet" href="~/css/swapbar.css">
 }
 
+<partial name="Swapbar.cshtml" model="Model" />
 <div class="container">
     <div class="title">
-        <h1>Laboratory @(Model.Id)</h1>
-        <h2>แสดงจำนวนอุปกรณ์ที่ว่างในแต่ละวัน</h2>
+        <h1>Laboratory @Model.Id</h1>
+        <div class="detail-header">
+            <p>แสดงจำนวนอุปกรณ์ที่ถูกจองในแต่วัน</p>
+            <p>จำนวนอุปกรณ์ : @Model.Amount</p>
+        </div>
     </div>
     <div class="book-table">
         <table>
@@ -42,14 +47,9 @@
                         {
                             <td class="not-enable" id='@($"slot{r}_{c}")'></td>
                         }
-                        else if (c == 0 && r + 8 < BangkokDateTime.now().Hour)
-                        {
-                            <td class="late" id='@($"slot{r}_{c}")' onclick="showResult(event);">
-                                @Model.BookSlotTable[r,c]</td>
-                        }
                         else
                         {
-                            <td class='@(Model.BookSlotTable[r,c] <= 0 ? "full" : "")' id='@($"slot{r}_{c}")'
+                            <td class='@(Model.BookSlotTable[r,c] >= @Model.Amount ? "full" : "")' id='@($"slot{r}_{c}")'
                     onclick="showResult(event);">
                                 @Model.BookSlotTable[r,c]</td>
                         }
