--- a/wwwroot/css/edit_profile.css
+++ b/wwwroot/css/edit_profile.css
@@ -34,11 +34,10 @@
 .container .upload {
   background-color: var(--blue);
   margin: 20px 0 0;
-  color: white;
   width: 140px;
   height: 40px;
   border-radius: 15px;
-  color: white;
+  color: #ffffff;
   font-size: 16px;
   border: none;
   box-shadow: 0 4px 4px 0 var(--blueshadow);
