--- a/Views/LabAdmin/ViewItem.cshtml
+++ b/Views/LabAdmin/ViewItem.cshtml
@@ -14,7 +14,7 @@
     <div class="title">
         <h1>Laboratory @Model.Id</h1>
         <div class="detail-header">
-            <p>แสดงจำนวนอุปกรณ์ที่ถูกจองในแต่วัน</p>
+            <p>แสดงจำนวนอุปกรณ์ที่ถูกจอง</p>
             <p>จำนวนอุปกรณ์ : @Model.Amount</p>
         </div>
     </div>
