--- a/Views/Search/UserProfile.cshtml
+++ b/Views/Search/UserProfile.cshtml
@@ -19,15 +19,15 @@
         <img src='@Url.Content(Model.ImageUrl != "" ? Model.ImageUrl : "~/assets/images/brand.jpg")' alt="user_image" />
     </div>
     <div class="information">
-        <div>Name</div>
+        <div class="title">Name</div>
         <div id="fullname">@($"{Model.FirstName} {Model.LastName}")</div>
-        <div>Email</div>
+        <div class="title">Email</div>
         <div id="email">@Model.Email</div>
-        <div>Phone</div>
+        <div class="title">Phone</div>
         <div id="phone">@($"{Convert.ToInt64(Model.Phone):000-000-0000}")</div>
-        <div>User ID</div>
+        <div class="title">User ID</div>
         <div id="id">@Model.Id.ToString("D8")</div>
-        <div>Status</div>
+        <div class="title">Status</div>
         <div id="Status" class=@(Model.BlackList ? "blacklisted" : "normal")>@(Model.BlackList ? "BLACKLISTED" :
             "NORMAL")</div>
     </div>
