--- a/wwwroot/css/edit_lab.css
+++ b/wwwroot/css/edit_lab.css
@@ -27,6 +27,7 @@
   border: 2px solid var(--blackgray);
   border-radius: 10px;
   margin: 20px 50px;
+  object-fit: cover;
 }
 
 .container .information {
@@ -65,6 +66,10 @@
 
 .container .information .control-amount button:active {
   background-color: var(--gray);
+}
+
+.container .information .control-amount button:hover {
+  cursor: pointer;
 }
 
 .container .information .control-amount input {
