--- a/wwwroot/css/navigation.css
+++ b/wwwroot/css/navigation.css
@@ -5,7 +5,6 @@
   justify-content: space-between;
   padding: 0 7.5%;
   line-height: 60px;
-  z-index: 99;
 }
 
 .brand {
@@ -39,7 +38,7 @@
 }
 
 .menu :not(.logout):hover {
-  background-color: #555555;
+  background-color: #070919;
 }
 
 .menu a:first-child {
@@ -57,6 +56,7 @@
   line-height: 30px;
   margin: 15px;
   user-select: none;
+  border-radius: 5px;
 }
 
 .logout:active {
