Edit search css + color

--- a/wwwroot/css/edit_lab.css
+++ b/wwwroot/css/edit_lab.css
@@ -114,7 +114,7 @@
 .container .reset {
   width: 120px;
   height: 40px;
-  background-color: #e57364;
+  background-color: #E35556;
   border-radius: 15px;
   font-size: 18px;
   color: white;
