--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -53,13 +53,14 @@ main {
   width: 100%;
   height: 100%;
   position: relative;
+  color: var(--blackgray);
 }
 
 :root {
   --blue: #236EEF;
-  --blue80: rgba(2, 117, 217, 0.5);
+  --blue80: rgba(35, 110, 239, 0.5);
   --blueshadow: rgba(0, 47, 80, 0.2);
-  --darkblue: #002f50;
+  --darkblue: #061E72;
   --red: #D12334;
   --darkred: #5c1714;
   --redshadow: rgba(102, 26, 26, 0.2);
@@ -67,7 +68,7 @@ main {
   --shadow: rgba(0, 0, 0, 0.25);
   --blackgray:#282a35;
   --green: #04AA6D;
-  --darkgreen: #10471d;
+  --darkgreen: #09532E;
   --greenshadow: rgba(40, 167, 69, 0.2);
   --white80: rgba(255, 255, 255, 0.5);
   --gray: #6c757d;
