--- a/wwwroot/css/user_profile.css
+++ b/wwwroot/css/user_profile.css
@@ -7,7 +7,7 @@
   
 .head > * {
     width: 12.5%;
-    color: #333333;
+    color: var(--blackgray);
     display: flex;
     background-color: #ffffff;
     justify-content: center;
