--- a/wwwroot/css/search.css
+++ b/wwwroot/css/search.css
@@ -15,10 +15,12 @@
   display: flex;
   flex-direction: row;
   margin: 50px 0;
+  border: solid 1px var(--green);
+  border-radius: 50px;
 }
 
 .search input[type="text"] {
-  padding: 10px;
+  padding: 10px 20px;
   font-size: 20px;
   border: none;
   width: 400px;
@@ -27,6 +29,7 @@
 
 .search input[type="text"].empty {
   font-family: FontAwesome, "Roboto", sans-serif;
+  border-radius: 50px;
 }
 
 .search-img {
