--- a/Views/User/Booklist.cshtml
+++ b/Views/User/Booklist.cshtml
@@ -80,3 +80,7 @@ else
 @section Modals {
 <p style="font-size: 24px;">Would you like to cancel this booklist ?</p>
 }
+
+@section Scripts {
+<script src="~/js/booklist.js"></script>
+}
