--- a/wwwroot/css/confirm_popup.css
+++ b/wwwroot/css/confirm_popup.css
@@ -74,3 +74,35 @@
   left: 50%;
   transform: translateX(-50%);
 }
+
+.loader-plane {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--shadow);
+  z-index: 11;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  position: fixed;
+  border: 16px solid var(--whitegray);
+  border-radius: 50%;
+  border-top: 16px solid var(--blue);
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
