--- a/Views/User/Booklist.cshtml
+++ b/Views/User/Booklist.cshtml
@@ -73,6 +73,11 @@ else
           </tr>
         }
       }
+      @if (Model.Count() == 10)
+      {
+        <tr class="bottom">
+        </tr>
+      }
     </tbody>
   </table>
 }
