--- a/Views/Search/UserBooklist.cshtml
+++ b/Views/Search/UserBooklist.cshtml
@@ -80,6 +80,11 @@
                         </tr>
                     }
                 }
+                @if (Model.Count() == 10)
+                {
+                    <tr class="bottom">
+                    </tr>
+                }
             </tbody>
         </table>
     }
@@ -87,4 +92,8 @@
 
 @section Modals {
 <p style="font-size: 24px;">Would you like to eject this booklist ?</p>
+}
+
+@section Scripts {
+<script src="~/js/user_booklist.js"></script>
 }
