--- a/wwwroot/css/booklist.css
+++ b/wwwroot/css/booklist.css
@@ -13,27 +13,39 @@
 }
 
 table {
-  display: grid;
-  margin: 20px 7.5%;
-  border-collapse: collapse;
-  grid-template-columns: 0.5fr 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0 7.5% 60px 7.5%;
+  height: calc(100vh - 230px);
   background-color: #ffffff;
+  margin-top: 2em;
 }
 
-thead,
-tbody,
 tr {
   display: contents;
 }
 
-th {
+thead {
+  display: grid;
+  grid-template-columns: 0.5fr 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
   background-color: var(--blackgray);
+}
+
+th {
   color: #ffffff;
   height: 60px;
   line-height: 60px;
   font-size: 24px;
   padding: 0px 20px;
-  /*margin-bottom: 20px;*/
+}
+
+tbody {
+  display: grid;
+  grid-template-columns: 0.5fr 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  background-color: #ffffff;
+  overflow-y: overlay;
+  padding-bottom: 100px;
 }
 
 td {
@@ -41,23 +53,18 @@ td {
   padding: 15px 20px;
 }
 
-th, td {
+th,
+td {
   display: inline-flex;
   align-items: center;
 }
 
-/*td:not(:nth-child(6n+6)){
-  line-height: 28px;
-}*/
-
-th:first-child, th:last-child,
-td:first-child, td:last-child {
+th:first-child,
+th:last-child,
+td:first-child,
+td:last-child {
   justify-content: center;
 }
-
-/*.status {
-  padding: 0 20px;
-}*/
 
 .status > span {
   padding: 8px 0;
@@ -84,4 +91,13 @@ td:first-child, td:last-child {
 
 .icon i:active {
   color: var(--darkred);
+}
+
+.bottom {
+  display: flex;
+  grid-column-start: 1;
+  grid-column-end: 8;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
 }
