--- a/Views/Admin/Blacklist.cshtml
+++ b/Views/Admin/Blacklist.cshtml
@@ -41,8 +41,16 @@ else
                         alt="user_image" /> @($"{user.FirstName} {user.LastName}")</td>
                         <td>@user.Email</td>
                         <td>@($"{Convert.ToInt64(user.Phone):000-000-0000}")</td>
-                        <td class="icon"><i class="fas fa-times-circle" onclick="confirmPopUpOnForm({id : '@user.Id'});"></i>
+                        <td class="icon">
+                            <a asp-controller="Search" asp-action="UserProfile" asp-route-Id="@user.Id">
+                                <i class="fas fa-eye view-button"></i></a>
+                            <i class="fas fa-times-circle cancel-button" onclick="confirmPopUpOnForm({id : '@user.Id'});"></i>
                         </td>
+                    </tr>
+                }
+                if (Model.Count() == 10)
+                {
+                    <tr class="bottom">
                     </tr>
                 }
             }
@@ -52,4 +60,8 @@ else
 
 @section Modals {
 <p style="font-size: 24px;">Would you like to unblacklist this user ?</p>
+}
+
+@section Scripts {
+<script src="~/js/blacklist.js"></script>
 }
