--- a/wwwroot/css/blacklist.css
+++ b/wwwroot/css/blacklist.css
@@ -1,75 +1,108 @@
 .header-empty {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 30vh;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+  width: 100%;
 }
 
 .title {
-    text-align: center;
-    margin-top: 30px;
-    color: var(--blackgray);
+  text-align: center;
+  margin-top: 30px;
+  color: var(--blackgray);
 }
-  
+
 table {
-    display: grid;
-    margin: 20px 7.5%;
-    border-collapse: collapse;
-    grid-template-columns: 0.5fr 0.75fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0 7.5% 60px 7.5%;
+  height: calc(100vh - 230px);
+  background-color: #ffffff;
+  margin-top: 2em;
 }
-  
-thead,
-tbody,
+
 tr {
-    display: contents;
+  display: contents;
 }
-  
+
+thead {
+  display: grid;
+  grid-template-columns: 0.5fr 0.75fr 1fr 1fr 0.5fr 0.5fr;
+  background-color: var(--blackgray);
+}
+
+tbody {
+  display: grid;
+  grid-template-columns: 0.5fr 0.75fr 1fr 1fr 0.5fr 0.5fr;
+  background-color: #ffffff;
+  overflow-y: overlay;
+  padding-bottom: 100px;
+}
+
 th,
 td {
-    display: inline-flex;
-    align-items: center;
+  display: inline-flex;
+  align-items: center;
 }
-  
+
 th {
-    background-color: var(--blackgray);
-    color: #ffffff;
-    height: 60px;
-    line-height: 60px;
-    font-size: 24px;
-    padding: 0px 20px;
-    /*margin-bottom: 20px;*/
+  background-color: var(--blackgray);
+  color: #ffffff;
+  height: 60px;
+  line-height: 60px;
+  font-size: 24px;
+  padding: 0px 20px;
+  /*margin-bottom: 20px;*/
 }
-  
+
 td {
-    border-bottom: 1px solid var(--blackgray);
-    padding: 15px 20px;
+  border-bottom: 1px solid var(--blackgray);
+  padding: 15px 20px;
 }
-  
-/*td:not(:nth-child(6n+6)){
-    line-height: 28px;
-}*/
-  
+
 .icon i {
-    font-size: 32px;
-    color: var(--red);
-    cursor: pointer;
-}
-  
-.icon i:active {
-    color: var(--darkred);
+  font-size: 32px;
+  cursor: pointer;
 }
 
-tbody > tr > td > img{
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
+.icon i.cancel-button {
+  padding: 10px;
+  color: var(--red);
 }
 
-th:first-child, td:first-child,
-th:last-child, td:last-child {
-    justify-content: center;
-} 
-  
+.icon i.cancel-button:active {
+  color: var(--darkred);
+}
+
+.icon i.view-button {
+  padding: 10px;
+  color: var(--blue);
+}
+
+.icon i.view-button:active {
+  color: var(--darkblue);
+}
+
+tbody > tr > td > img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+th:first-child,
+td:first-child,
+th:last-child,
+td:last-child {
+  justify-content: center;
+}
+
+.bottom {
+  display: flex;
+  grid-column-start: 1;
+  grid-column-end: 7;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+}
