edit comment and css

--- a/wwwroot/css/user_booklist.css
+++ b/wwwroot/css/user_booklist.css
@@ -54,7 +54,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30vh;
+  height: calc(100vh - 230px);
   width: 100%;
 }
 
