--- a/Views/Admin/Blacklist.cshtml
+++ b/Views/Admin/Blacklist.cshtml
@@ -62,6 +62,9 @@ else
 <p style="font-size: 24px;">Would you like to unblacklist this user ?</p>
 }
 
-@section Scripts {
-<script src="~/js/blacklist.js"></script>
+@if (Model.Count() > 0)
+{
+    @section Scripts {
+    <script src="~/js/blacklist.js"></script>
+    }
 }
