--- a/Views/Search/UserBooklist.cshtml
+++ b/Views/Search/UserBooklist.cshtml
@@ -94,6 +94,9 @@
 <p style="font-size: 24px;">Would you like to eject this booklist ?</p>
 }
 
-@section Scripts {
-<script src="~/js/user_booklist.js"></script>
+@if (Model.Count() > 0)
+{
+    @section Scripts {
+    <script src="~/js/user_booklist.js"></script>
+    }
 }
