--- a/Views/Admin/Blacklist.cshtml
+++ b/Views/Admin/Blacklist.cshtml
@@ -48,10 +48,12 @@ else
                         {
                             <td>@($"{Convert.ToInt64(user.Phone):000-000-000}")</td>
                         }
-                        <td class="icon">
-                            <a asp-controller="Search" asp-action="UserProfile" asp-route-Id="@user.Id">
-                                <i class="fas fa-eye view-button"></i></a>
-                            <i class="fas fa-times-circle cancel-button" onclick="confirmPopUpOnForm({id : '@user.Id'});"></i>
+                        <td>
+                            <div class="icon"><a asp-controller="Search" asp-action="UserProfile" asp-route-Id="@user.Id"><i
+                                class="fas fa-eye view-button"></i></a><span class="tooltip">View</span></div>
+                            <div class="icon"><i class="fas fa-times-circle cancel-button"
+                            onclick="confirmPopUpOnForm({id : '@user.Id'});"></i><span class="tooltip">Unblacklist</span>
+                            </div>
                         </td>
                     </tr>
                 }
