--- a/wwwroot/css/booklist.css
+++ b/wwwroot/css/booklist.css
@@ -37,7 +37,6 @@ th {
   height: 60px;
   line-height: 60px;
   font-size: 24px;
-  padding: 0px 20px;
 }
 
 tbody {
@@ -50,7 +49,7 @@ tbody {
 
 td {
   border-bottom: 1px solid var(--blackgray);
-  padding: 15px 20px;
+  padding: 15px 0px;
 }
 
 th,
@@ -100,4 +99,29 @@ td:last-child {
   height: 50px;
   justify-content: center;
   align-items: center;
+}
+
+.icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.tooltip {
+  visibility: hidden;
+  background-color: #ffffff;
+  color: var(--blackgray);
+  border: solid 1px var(--blackgray);
+  font-size: 10px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  margin-top: -25px;
+  z-index: 1;
+}
+
+.icon:hover .tooltip{
+  visibility: visible;
 }
