--- a/wwwroot/css/view_item.css
+++ b/wwwroot/css/view_item.css
@@ -151,12 +151,12 @@
 }
 
 .book-list-range .cancel-button {
-    padding: 10px;
+    margin: 10px;
     color: var(--red);
 }
 
 .book-list-range .view-button {
-    padding: 10px;
+    margin: 10px;
     color: var(--blue);
 }
   
@@ -166,6 +166,10 @@
 
 .book-list-range .view-button:active {
     color: var(--darkblue);
+}
+
+.book-list-range .cancel-button:active {
+    color: var(--darkred);
 }
 
 .no-booklist {
@@ -193,3 +197,28 @@
 .status .coming {
     background-color: var(--blue);
 }
+
+.icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+  
+  .tooltip {
+    visibility: hidden;
+    background-color: #ffffff;
+    color: var(--blackgray);
+    border: solid 1px var(--blackgray);
+    font-size: 10px;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    margin-top: -14px;
+    z-index: 1;
+  }
+  
+  .icon:hover .tooltip{
+    visibility: visible;
+  }
