--- a/Views/Lab/Booking.cshtml
+++ b/Views/Lab/Booking.cshtml
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="title">
         <h1>Laboratory @(Model.Id)</h1>
-        <h2>แสดงจำนวนอุปกรณ์ที่ว่างในแต่ละวัน</h2>
+        <h2>จำนวนอุปกรณ์ที่ว่างในแต่ละวัน</h2>
     </div>
     <table>
         <tr>
