--- a/wwwroot/css/blacklist.css
+++ b/wwwroot/css/blacklist.css
@@ -36,6 +36,7 @@ tbody {
   display: grid;
   grid-template-columns: 0.5fr 0.75fr 1fr 1fr 0.5fr 0.5fr;
   background-color: #ffffff;
+  overflow-x: hidden;
   overflow-y: overlay;
   padding-bottom: 100px;
 }
@@ -122,8 +123,8 @@ td:last-child {
   border-radius: 5px;
   padding: 5px;
   position: absolute;
-  margin-top: -15px;
   z-index: 1;
+  margin-top: -20px;
 }
 
 .icon:hover .tooltip{
