--- a/wwwroot/css/booklist.css
+++ b/wwwroot/css/booklist.css
@@ -43,6 +43,7 @@ tbody {
   display: grid;
   grid-template-columns: 0.5fr 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
   background-color: #ffffff;
+  overflow-x: hidden;
   overflow-y: overlay;
   padding-bottom: 100px;
 }
@@ -117,9 +118,9 @@ td:last-child {
   text-align: center;
   border-radius: 5px;
   padding: 5px;
+  z-index: 1;
   position: absolute;
   margin-top: -25px;
-  z-index: 1;
 }
 
 .icon:hover .tooltip{
