--- a/wwwroot/css/user_booklist.css
+++ b/wwwroot/css/user_booklist.css
@@ -83,6 +83,7 @@ tbody {
   display: grid;
   grid-template-columns: 0.5fr 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
   background-color: #ffffff;
+  overflow-x: hidden;
   overflow-y: overlay;
   padding-bottom: 100px;
 }
@@ -134,6 +135,13 @@ td:last-child {
   background-color: var(--blue);
 }
 
+.icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
 .icon i {
   font-size: 32px;
   color: var(--red);
@@ -142,6 +150,24 @@ td:last-child {
 
 .icon i:active {
   color: var(--darkred);
+}
+
+.tooltip {
+  visibility: hidden;
+  background-color: #ffffff;
+  color: var(--blackgray);
+  border: solid 1px var(--blackgray);
+  font-size: 10px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  z-index: 1;
+  position: absolute;
+  margin-top: -25px;
+}
+
+.icon:hover .tooltip{
+  visibility: visible;
 }
 
 .bottom {
