--- a/Views/Shared/_NavigationAdmin.cshtml
+++ b/Views/Shared/_NavigationAdmin.cshtml
@@ -4,10 +4,10 @@
 }
 
 <nav class="navbar">
-    <div class="brand">
+    <a asp-controller="LabAdmin" asp-action="Index" class="brand">
         <img src="~/assets/images/brand.jpg" alt="logo" class="brand-img" />
         <div class="brand-text">Sloth Flying Lab</div>
-    </div>
+    </a>
     <div class="menu">
         <a id="lab" asp-controller="LabAdmin" asp-action="Index"
             class='@("LabAdmin" == controller ? "active" : "")'>Lab</a>
