--- a/pages sloth/styles/home.css
+++ b/pages sloth/styles/home.css
@@ -4,7 +4,7 @@
 body {
   font-size: 14px;
 }
-.v98_250 {
+.main_container {
   min-height: 100vh;
   background: rgba(255, 255, 255, 1);
   opacity: 1;
@@ -25,8 +25,8 @@ body {
 }
 
 .logo {
-  width: 500px;
-  height: 484px;
+  width: 35%;
+  height: 35%;
   background: url("../images/v106_28.png");
   opacity: 1;
   border-radius: 50%;
@@ -46,11 +46,11 @@ body {
   position: absolute;
   font-family: Roboto;
   font-weight: Regular;
-  font-size: 28px;
+  font-size: 24px;
   opacity: 1;
   text-align: center;
-  width: 220px;
-  height: 71px;
+  width: 200px;
+  height: 50px;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
